--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body{
   margin: 0 0;
 }
 .box{
-  width: 25%;
-  height: 75%;
+  width: 375px;
+  height: 570px;
   background-color: white;
   margin-left: 40%;
   margin-top: 7.5%;
