--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@ body{
   background-color: hsl(212, 45%, 89%);
   text-align: center;
   font-family: 'Outfit', sans-serif;
-  margin: 0 0;
+  margin: 100px 0;
 }
 .box{
   width: 375px;
   height: 570px;
   background-color: white;
-  margin-left: 40%;
-  margin-top: 7.5%;
+  /* margin-left: 40%; */
+  margin: auto;
   border-radius: 5%;
 }
 h2{
@@ -20,6 +20,6 @@ h3{
   padding-bottom: 15%;
 }
 img{
-  margin-top: 5%;
   border-radius: 5%;
+  margin-top: 5%;
 }
