--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,21 @@ body{
   background-color: hsl(212, 45%, 89%);
   text-align: center;
   font-family: 'Outfit', sans-serif;
-  margin: 100px 0;
+  min-height: 100vh;
+  display:grid;
+  place-items: center;
+  margin: auto 0;
 }
 .box{
-  width: 375px;
+  /* width: 375px;
   height: 570px;
-  background-color: white;
+  background-color: white; */
   /* margin-left: 40%; */
   margin: auto;
   border-radius: 5%;
+  background-color: white;
+  max-width: 300px; /* key */
+  padding: 15px; /* key */
 }
 h2{
   color: hsl(218, 44%, 22%);
@@ -20,6 +26,8 @@ h3{
   padding-bottom: 15%;
 }
 img{
+  max-width: 300px; /* key */
+  max-height: 300px; /* key */
   border-radius: 5%;
   margin-top: 5%;
 }
